updated to newest springboot and postgres, switched ids to use uuid generated by postgres